# fluency-trainer

./: .gitignore  Readme.md  build_matrices.py  build_model.py  build_samples.py  build_vocab.py  dataloader.py  demo.py  download_wav2vec2.py  evaluate_model.py  extract_user_audio_logits.py  hf_upload.py  makefile  mean_baseline.py  pyproject.toml  user_audio_matrices.py
data/samples/: test.json  train.json  val.json
data/vocab/: vocab.json
src/fluency_trainer/: build_vocab.py  classifier_head.py  cross_attention_transformer.py  dataloader.py  matrices_to_tensors.py  pad_target.py  phone_audio_alignment_model.py  samples_to_matrices.py  target_phoneme_encoder.py  target_phones_matrix.py  train.py  user_audio_matrix.py  user_phoneme_encoder.py
src/fluency_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
