[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fluency_trainer"
version = "0.1.0"
requires-python = ">=3.11, <3.14"

dependencies = [
    "pandas>=2.2,<3",
    "scikit-learn>=1.7,<1.9",
    "numpy>=1.26,<3",
    "tensorflow>=2.16,<3",
    "torch>=2.7,<3",
    "soundfile>=0.12,<1",
    "transformers>=4.50,<6",
    "phonemizer>=3.3,<4",
    "huggingface-hub>=1,<2"
]

[tool.dagster]
module_name="fluency_trainer.definitions"

[tools.setuptools.packages.find]
where = ["src"]